--- a/survey2.yml
+++ b/survey2.yml
@@ -1,5 +1,5 @@
 ---
-- name: Demonstrate using surveys with templates
+- name: Diagnostic Ansible AWX
   hosts: localhost
   gather_facts: false
   become: true
@@ -7,22 +7,17 @@
     file_loc: /home/dhia/Desktop/awxsurvey/survey-template.conf
 
   tasks:
-    - name: Ensure the destination directory exists
-      file:
+    - name: Afficher la variable file_loc
+      debug:
+        var: file_loc
+
+    - name: Créer le dossier si inexistant
+      ansible.builtin.file:
         path: /home/dhia/Desktop/awxsurvey
         state: directory
         mode: '0755'
 
-    - name: Call the template with survey variables
+    - name: Créer le template
       template:
         src: survey-template.conf.j2
         dest: "{{ file_loc }}"
-
-    - name: Set file contents to variable
-      set_fact:
-        file_con: "{{ lookup('file', file_loc) }}"
-
-    - name: Debug file to screen
-      debug:
-        var: file_con
-
