--- a/survey2.yml
+++ b/survey2.yml
@@ -1,15 +1,15 @@
 ---
-- name: Diagnostic Ansible AWX
+- name: Diagnostic Ansible AWX with External Variables
   hosts: localhost
   gather_facts: false
   become: true
-  vars:
-    file_loc: /home/dhia/Desktop/awxsurvey/survey-template.conf
+  vars_files:
+    - /home/dhia/Desktop/awxsurvey/vars.yml
 
   tasks:
-    - name: Afficher la variable file_loc
+    - name: Vérifier la présence des variables
       debug:
-        var: file_loc
+        msg: "serv_name={{ serv_name }}, option1={{ option1 }}, option2={{ option2 }}"
 
     - name: Créer le dossier si inexistant
       ansible.builtin.file:
@@ -17,7 +17,15 @@
         state: directory
         mode: '0755'
 
-    - name: Créer le template
+    - name: Copier le template
       template:
         src: survey-template.conf.j2
         dest: "{{ file_loc }}"
+
+    - name: Afficher le contenu généré
+      set_fact:
+        file_con: "{{ lookup('file', file_loc) }}"
+        
+    - name: Debug file to screen
+      debug:
+        var: file_con
