--- a/survey2.yml
+++ b/survey2.yml
@@ -1,31 +1,21 @@
 ---
-- name: Diagnostic Ansible AWX with External Variables
+- name: demonstrate using surveys with templates
   hosts: localhost
   gather_facts: false
   become: true
-  vars_files:
-    - /home/dhia/Desktop/awxsurvey/vars.yml
+  vars:
+    file_loc: /home/dhia/Desktop/jinja2test/survey-template.conf
 
   tasks:
-    - name: Vérifier la présence des variables
-      debug:
-        msg: "serv_name={{ serv_name }}, option1={{ option1 }}, option2={{ option2 }}"
+  - name: call the template with our survey info
+    template:
+      src: /home/dhia/Desktop/jinja2test/survey-template.conf.j2
+      dest: "{{ file_loc }}"
 
-    - name: Créer le dossier si inexistant
-      ansible.builtin.file:
-        path: /home/dhia/Desktop/awxsurvey
-        state: directory
-        mode: '0755'
+  - name: set file contents to variable
+    set_fact:
+      file_con: "{{ lookup('file', file_loc) }}"
 
-    - name: Copier le template
-      template:
-        src: survey-template.conf.j2
-        dest: "{{ file_loc }}"
-
-    - name: Afficher le contenu généré
-      set_fact:
-        file_con: "{{ lookup('file', file_loc) }}"
-        
-    - name: Debug file to screen
-      debug:
-        var: file_con
+  - name: debug file to screen
+    debug:
+      var: file_con
