--- a/surve.yml
+++ b/surve.yml
@@ -3,32 +3,33 @@
   hosts: localhost
   gather_facts: false
   become: true
+  become_user: "dhia"
   vars:
-    file_loc: /home/dhia/Desktop/awxsurvey/survey-template.conf
-    serv_name: MyServer
-    option1: EnableFeature
-    option2: DisableFeature
+    file_loc: /home/dhia/Desktop/jinja2test/survey-template.conf
+    output_loc: /home/dhia/Desktop/jinja2test/survey-result.conf
+  vars_files:
+      - vars.yml
 
   tasks:
     - name: Vérifier la présence des variables
       debug:
         msg: "serv_name={{ serv_name }}, option1={{ option1 }}, option2={{ option2 }}"
 
-    - name: Créer le dossier si inexistant
-      ansible.builtin.file:
-        path: /home/dhia/Desktop/awxsurvey
-        state: directory
-        mode: '0755'
-
     - name: Copier le template
       template:
         src: survey-template.conf.j2
         dest: "{{ file_loc }}"
 
-    - name: Afficher le contenu généré
-      set_fact:
-        file_con: "{{ lookup('file', file_loc) }}"
-        
-    - name: Debug file to screen
+    - name: Lire le contenu du fichier généré
+      slurp:
+        src: "{{ file_loc }}"
+      register: slurped_file
+
+    - name: Enregistrer le contenu dans un autre fichier
+      copy:
+        content: "{{ slurped_file.content | b64decode }}"
+        dest: "{{ output_loc }}"
+
+    - name: Afficher ce qu'on a écrit dans output.txt
       debug:
-        var: file_con
+        msg: "Contenu écrit dans {{ output_loc }}"
